<resources>
    <string name="app_name">Double Tap For Camera</string>
    <string name="title_activity_settings">Double Tap For Camera</string>


    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_click_delay">Click delay</string>
    <string name="enabled">Enable</string>
    <string name="enabled_desciption">Enable Double Tap For Camera</string>
    <string name="pref_click_delay_description">How long between the first click to the second?</string>
    <string name="debugging_mode">Debugging mode</string>
    <string name="debugging_mode_summary">Show debugging messages</string>
    <string name="github_summary">The app\'s GitHub Page if you would like to contribute this project.</string>
    <string name="github">Github Page</string>
    <string name="secure_click_summary">Triple click power button for camera for secure click, less bugs, but slower.</string>
    <string name="secure_click_title">Secure click</string>
    <string-array name="pref_click_delay_list">
        <item>1 second</item>
        <item>2 seconds</item>
        <item>3 seconds</item>
        <item>4 seconds</item>
        <item>5 seconds</item>
    </string-array>
    <string-array name="pref_click_delay_values">
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
    </string-array>

</resources>
