<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="enabled"
        android:summary="@string/enabled_desciption"
        android:title="@string/enabled" />

    <ListPreference
        android:defaultValue="2000"
        android:entries="@array/pref_click_delay_list"
        android:entryValues="@array/pref_click_delay_values"
        android:key="click_delay"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_click_delay_description"
        android:title="@string/pref_click_delay" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="triple"
        android:summary="@string/secure_click_summary"
        android:title="@string/secure_click_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="debug"
        android:summary="@string/debugging_mode_summary"
        android:title="@string/debugging_mode" />

    <Preference
        android:key="github"
        android:summary="@string/github_summary"
        android:title="@string/github" />


</PreferenceScreen>
